--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Javascript</title>
   </head>
   <body>
-    <script src="/src/app.js"></script>
+    <script src="src/app.js"></script>
   </body>
 </html>
